# cultureid-turtlebot-packages

cultureid_turtlebot_bringup/: CMakeLists.txt  package.xml
cultureid_turtlebot_bringup/launch/: 2dsensor.launch  minimal.launch  orbbec_pro_full.launch  ydlidar_tg30.launch
cultureid_turtlebot_bringup/launch/includes/: cultureid_turtlebot_sensors.launch.xml  description.launch.xml  mobile_base.launch.xml  robot.launch.xml
cultureid_turtlebot_bringup/launch/includes/kobuki/: mobile_base.launch.xml
cultureid_turtlebot_bringup/param/defaults/: .smoother.yaml.swp  smoother.yaml
cultureid_turtlebot_description/: CMakeLists.txt  package.xml
cultureid_turtlebot_description/kobuki/urdf/: kobuki.urdf.xacro
cultureid_turtlebot_description/robots/: turtlebot_one_camera.urdf.xacro  turtlebot_two_cameras.urdf.xacro  turtlebot_zero_cameras.urdf.xacro
cultureid_turtlebot_description/turtlebot/urdf/: turtlebot_common_library.urdf.xacro  turtlebot_gazebo.urdf.xacro  turtlebot_properties.urdf.xacro
cultureid_turtlebot_navigation/: CMakeLists.txt  package.xml
cultureid_turtlebot_navigation/launch/includes/: velocity_smoother.launch.xml
cultureid_turtlebot_packages/: CMakeLists.txt  package.xml
cultureid_turtlebot_teleop/: CMakeLists.txt  package.xml
cultureid_turtlebot_teleop/launch/: keyboard_teleop.launch  ps34_teleop.launch  ps3_teleop.launch  ps4_teleop.launch  ps4_teleop_with_smoother.launch
cultureid_turtlebot_teleop/launch/includes/: velocity_smoother.launch.xml
cultureid_turtlebot_teleop/src/: cultureid_turtlebot_ps4_pad.cpp
(+16 files in other folders)
