<?xml version="1.0"?>
<package>
  <name>cultureid_turtlebot_packages</name>
  <version>0.0.0</version>
  <description>A collection of turtlebot packages for project cultureid</description>

  <maintainer email="alexandros.filotheou@issel.ee.auth.gr"></maintainer>

  <license>BSD</license>

  <author email="alexandros.filotheou@issel.ee.auth.gr"></author>

  <buildtool_depend>catkin</buildtool_depend>

   <export>
     <metapackage />
   </export>
</package>
